--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^16.0.0",
     "react-router": "^0.13.3",
     "reactfy": "^0.1.1",
+    "toastr": "^2.1.4",
     "vinyl-source-stream": "^2.0.0"
   }
 }
